--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,45 +2,41 @@ name: Build Kivy APK
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout Code
       uses: actions/checkout@v3
 
-    - name: Set up Python 3.10
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: 3.10
 
-    - name: Install system dependencies
+    - name: Install build dependencies
       run: |
         sudo apt update
-        sudo apt install -y zip unzip openjdk-17-jdk python3-pip wget
+        sudo apt install -y git zip unzip openjdk-17-jdk python3-pip python3-setuptools
+        pip install --upgrade pip
+        pip install buildozer cython virtualenv
 
-    - name: Install Python packages
+    - name: Initialize buildozer
       run: |
-        pip install --upgrade pip setuptools wheel
-        pip install buildozer cython
+        buildozer init || true
 
-    - name: Download and Setup Android NDK 25b
+    - name: Accept licenses and build APK
       run: |
-        wget https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
-        unzip android-ndk-r25b-linux.zip -d $HOME
-      env:
-        ANDROIDNDK: ${{ env.HOME }}/android-ndk-r25b
-
-    - name: Accept Android SDK licenses
-      run: yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
-
-    - name: Build APK with Buildozer
-      env:
-        ANDROIDNDK: ${{ env.HOME }}/android-ndk-r25b
-      run: |
+        mkdir -p ~/.android/ && touch ~/.android/repositories.cfg
+        yes | sdkmanager --licenses || true
         buildozer android debug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: kivy-app
+        path: bin/*.apk
