--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,35 +11,46 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: Install buildozer dependencies
+    - name: Install dependencies
       run: |
         sudo apt update
         sudo apt install -y zip unzip openjdk-17-jdk python3-pip
         pip install --upgrade pip setuptools wheel
         pip install buildozer cython
 
-    - name: Download and Set up Android NDK 25b
+    - name: Download Android NDK 25b
       run: |
         wget https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
         unzip android-ndk-r25b-linux.zip -d $HOME
+
+    - name: Install Android SDK Command-line tools
+      run: |
+        mkdir -p $HOME/Android/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip -d $HOME/Android/cmdline-tools
+        mv $HOME/Android/cmdline-tools/cmdline-tools $HOME/Android/cmdline-tools/latest
+
+    - name: Set Android environment variables
+      run: |
+        echo "ANDROIDSDK=$HOME/Android" >> $GITHUB_ENV
+        echo "ANDROID_NDK_HOME=$HOME/android-ndk-r25b" >> $GITHUB_ENV
         echo "ANDROIDNDK=$HOME/android-ndk-r25b" >> $GITHUB_ENV
+        echo "ANDROID_SDK_ROOT=$HOME/Android" >> $GITHUB_ENV
 
     - name: Accept Android SDK licenses
-      run: yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses || true
+      run: yes | $HOME/Android/cmdline-tools/latest/bin/sdkmanager --licenses || true
 
     - name: Build APK
       run: buildozer android debug
 
     - name: Upload APK artifact
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v3
       with:
         name: loginapp-apk
         path: bin/*.apk
