--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,46 +11,49 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-    - uses: actions/setup-python@v4
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y zip unzip openjdk-17-jdk python3-pip
+        sudo apt install -y zip unzip openjdk-17-jdk python3-pip wget
         pip install --upgrade pip setuptools wheel
         pip install buildozer cython
 
-    - name: Download Android NDK 25b
+    - name: Download and setup Android NDK 25b
       run: |
         wget https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
-        unzip android-ndk-r25b-linux.zip -d $HOME
-
-    - name: Install Android SDK Command-line tools
-      run: |
-        mkdir -p $HOME/Android/cmdline-tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip -d $HOME/Android/cmdline-tools
-        mv $HOME/Android/cmdline-tools/cmdline-tools $HOME/Android/cmdline-tools/latest
-
-    - name: Set Android environment variables
-      run: |
-        echo "ANDROIDSDK=$HOME/Android" >> $GITHUB_ENV
-        echo "ANDROID_NDK_HOME=$HOME/android-ndk-r25b" >> $GITHUB_ENV
+        unzip -q android-ndk-r25b-linux.zip -d $HOME
         echo "ANDROIDNDK=$HOME/android-ndk-r25b" >> $GITHUB_ENV
-        echo "ANDROID_SDK_ROOT=$HOME/Android" >> $GITHUB_ENV
+
+    - name: Download and setup Android SDK Command-line tools
+      run: |
+        mkdir -p $HOME/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip -q cmdline-tools.zip -d $HOME/cmdline-tools
+        mkdir -p $HOME/android-sdk/cmdline-tools
+        mv $HOME/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+        echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
+        echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
 
     - name: Accept Android SDK licenses
-      run: yes | $HOME/Android/cmdline-tools/latest/bin/sdkmanager --licenses || true
+      run: yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+
+    - name: Install required SDK packages
+      run: |
+        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
 
     - name: Build APK
       run: buildozer android debug
 
     - name: Upload APK artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: loginapp-apk
         path: bin/*.apk
