--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,34 +26,35 @@ jobs:
         pip install --upgrade pip setuptools wheel
         pip install buildozer cython
 
+    - name: Download and setup Android SDK cmdline tools
+      run: |
+        mkdir -p $HOME/android-sdk/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
+        mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
+        rm cmdline-tools.zip
+      env:
+        ANDROID_SDK_ROOT: ${{ env.HOME }}/android-sdk
+
+    - name: Accept licenses and install required SDK packages
+      run: |
+        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
+      env:
+        ANDROID_SDK_ROOT: ${{ env.HOME }}/android-sdk
+
+    - name: Set environment variables
+      run: |
+        echo "ANDROIDSDK=$HOME/android-sdk" >> $GITHUB_ENV
+        echo "ANDROIDNDK=$HOME/android-ndk-r25b" >> $GITHUB_ENV
+        echo "PATH=$HOME/android-sdk/platform-tools:$HOME/android-sdk/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
+
     - name: Download and setup Android NDK 25b
       run: |
         wget https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
-        unzip -q android-ndk-r25b-linux.zip -d $HOME
-        echo "ANDROIDNDK=$HOME/android-ndk-r25b" >> $GITHUB_ENV
-
-    - name: Download and setup Android SDK Command-line tools
-      run: |
-        mkdir -p $HOME/cmdline-tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-        unzip -q cmdline-tools.zip -d $HOME/cmdline-tools
-        mkdir -p $HOME/android-sdk/cmdline-tools
-        mv $HOME/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
-        echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
-        echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
-
-    - name: Accept Android SDK licenses
-      run: yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-
-    - name: Install required SDK packages
-      run: |
-        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
+        unzip android-ndk-r25b-linux.zip -d $HOME
+        rm android-ndk-r25b-linux.zip
 
     - name: Build APK
-      run: buildozer android debug
-
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: loginapp-apk
-        path: bin/*.apk
+      run: |
+        buildozer android debug
