--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,55 +11,36 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      ANDROID_BUILD_TOOLS_VERSION: "30.0.3"
+      ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
 
     steps:
-    - name: Clean Android SDK cache
-      run: rm -rf $HOME/.buildozer/android/platform
-
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Python 3.10
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: Install dependencies
+    - name: Install buildozer dependencies
       run: |
         sudo apt update
-        sudo apt install -y zip unzip openjdk-17-jdk python3-pip wget
+        sudo apt install -y zip unzip openjdk-17-jdk python3-pip
         pip install --upgrade pip setuptools wheel
         pip install buildozer cython
 
-    - name: Download Android SDK cmdline-tools
+    - name: Download Android SDK Command line tools
       run: |
-        mkdir -p $HOME/android-sdk/cmdline-tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
-        mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
-        rm cmdline-tools.zip
-      env:
-        ANDROID_SDK_ROOT: ${{ env.HOME }}/android-sdk
+        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip -d $ANDROID_SDK_ROOT/cmdline-tools
+        mv $ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools $ANDROID_SDK_ROOT/cmdline-tools/latest
 
-    - name: Accept licenses and install required SDK packages
+    - name: Accept SDK licenses and install required packages
       run: |
-        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
-      env:
-        ANDROID_SDK_ROOT: ${{ env.HOME }}/android-sdk
+        yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses
+        $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
 
-    - name: Download and setup Android NDK 25b
+    - name: Build APK with Buildozer
       run: |
-        wget https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
-        unzip android-ndk-r25b-linux.zip -d $HOME
-        rm android-ndk-r25b-linux.zip
-
-    - name: Set environment variables for buildozer
-      run: |
-        echo "ANDROIDSDK=$HOME/android-sdk" >> $GITHUB_ENV
-        echo "ANDROIDNDK=$HOME/android-ndk-r25b" >> $GITHUB_ENV
-        echo "PATH=$HOME/android-sdk/platform-tools:$HOME/android-sdk/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
-
-    - name: Build APK
-      run: buildozer android debug
+        buildozer android debug
