--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,40 @@
-name: Build Kivy APK
+name: Build Kivy App APK
 
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
+on: push: branches: [ main ]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+jobs: build: runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v3
+steps:
+- name: Checkout repository
+  uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.10
+- name: Set up Python
+  uses: actions/setup-python@v4
+  with:
+    python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install buildozer cython virtualenv
+- name: Install dependencies
+  run: |
+    sudo apt update
+    sudo apt install -y git zip unzip openjdk-17-jdk python3-pip libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev
+    python3 -m pip install --upgrade pip
+    pip install buildozer cython kivy requests
 
-      - name: Install Android SDK and Accept Licenses
-        run: |
-          sudo apt update
-          sudo apt install -y openjdk-11-jdk unzip zip wget
-          wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip -d cmdline-tools
-          mkdir -p $HOME/android-sdk/cmdline-tools/latest
-          mv cmdline-tools/cmdline-tools/* $HOME/android-sdk/cmdline-tools/latest
+- name: Accept licenses and install SDK tools
+  run: |
+    mkdir -p ~/.android && touch ~/.android/repositories.cfg
+    yes | sdkmanager --licenses || true
+    yes | sdkmanager "platforms;android-30" "build-tools;30.0.3"
+  env:
+    ANDROID_SDK_ROOT: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
 
-          export ANDROID_HOME=$HOME/android-sdk
-          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
+- name: Build APK
+  run: |
+    buildozer android debug
 
-          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
-          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;32.1.0"
+- name: Upload APK
+  uses: actions/upload-artifact@v4
+  with:
+    name: kivy-app-apk
+    path: bin/*.apk
 
-      - name: Build APK
-        run: |
-          export ANDROID_HOME=$HOME/android-sdk
-          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
-          buildozer android debug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: kivy-apk
-          path: bin/*.apk
