--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,55 @@
-name: Build Kivy App APK
+name: Build Kivy APK
 
-on: push: branches: [ main ]
+on:
+  push:
+    branches: [ main ]
 
-jobs: build: runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-steps:
-- name: Checkout repository
-  uses: actions/checkout@v3
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-- name: Set up Python
-  uses: actions/setup-python@v4
-  with:
-    python-version: '3.10'
+    - name: Setup Python 3.10
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-- name: Install dependencies
-  run: |
-    sudo apt update
-    sudo apt install -y git zip unzip openjdk-17-jdk python3-pip libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev
-    python3 -m pip install --upgrade pip
-    pip install buildozer cython kivy requests
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y openjdk-17-jdk zip unzip
+        python3 -m pip install --upgrade pip setuptools wheel
+        pip install buildozer cython
 
-- name: Accept licenses and install SDK tools
-  run: |
-    mkdir -p ~/.android && touch ~/.android/repositories.cfg
-    yes | sdkmanager --licenses || true
-    yes | sdkmanager "platforms;android-30" "build-tools;30.0.3"
-  env:
-    ANDROID_SDK_ROOT: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
+    - name: Setup Android SDK command line tools
+      run: |
+        mkdir -p $HOME/Android/cmdline-tools
+        cd $HOME/Android/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip
+        rm cmdline-tools.zip
+        mv cmdline-tools latest
 
-- name: Build APK
-  run: |
-    buildozer android debug
+    - name: Set environment variables
+      run: |
+        echo "ANDROID_SDK_ROOT=$HOME/Android" >> $GITHUB_ENV
+        echo "PATH=$HOME/Android/cmdline-tools/latest/bin:$PATH" >> $GITHUB_PATH
 
-- name: Upload APK
-  uses: actions/upload-artifact@v4
-  with:
-    name: kivy-app-apk
-    path: bin/*.apk
+    - name: Accept licenses and install SDK packages
+      run: |
+        yes | sdkmanager --licenses
+        sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
 
+    - name: Download and setup NDK 25b
+      run: |
+        wget https://dl.google.com/android/repository/android-ndk-r25b-linux.zip -O ndk.zip
+        unzip ndk.zip -d $HOME/Android/
+        rm ndk.zip
+        echo "ANDROID_NDK_ROOT=$HOME/Android/android-ndk-r25b" >> $GITHUB_ENV
+        echo "PATH=$HOME/Android/android-ndk-r25b:$PATH" >> $GITHUB_PATH
+
+    - name: Build APK
+      run: buildozer android debug
