--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,42 +8,36 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      ANDROID_SDK_ROOT: ${{ runner.temp }}/android-sdk
+      ANDROID_HOME: ${{ runner.temp }}/android-sdk
+      PATH: ${{ runner.temp }}/android-sdk/cmdline-tools/latest/bin:$PATH
+
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
 
-    - name: Setup Python 3.10
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-
     - name: Install dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y openjdk-17-jdk zip unzip
-        python3 -m pip install --upgrade pip setuptools wheel
+        sudo apt update
+        sudo apt install -y openjdk-17-jdk python3-pip unzip wget
+        pip install --upgrade pip setuptools wheel
         pip install buildozer cython
 
-    - name: Setup Android SDK command line tools
+    - name: Download Android cmdline-tools
       run: |
-        mkdir -p $HOME/Android/cmdline-tools
-        cd $HOME/Android/cmdline-tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip
-        rm cmdline-tools.zip
-        mv cmdline-tools latest
+        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip -d $ANDROID_SDK_ROOT/cmdline-tools
+        mv $ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools $ANDROID_SDK_ROOT/cmdline-tools/latest
 
-    - name: Accept licenses and install SDK packages
-      run: |
-        yes | $HOME/Android/cmdline-tools/latest/bin/sdkmanager --licenses
-        $HOME/Android/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
+    - name: Accept Android SDK licenses
+      run: yes | sdkmanager --licenses
 
-    - name: Download and setup NDK 25b
+    - name: Install required Android SDK packages
       run: |
-        wget https://dl.google.com/android/repository/android-ndk-r25b-linux.zip -O ndk.zip
-        unzip ndk.zip -d $HOME/Android/
-        rm ndk.zip
-        echo "ANDROID_NDK_ROOT=$HOME/Android/android-ndk-r25b" >> $GITHUB_ENV
+        sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
 
     - name: Build APK
-      run: buildozer android debug
+      run: |
+        buildozer android debug
