--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,39 +5,22 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
 
-    env:
-      ANDROID_SDK_ROOT: ${{ runner.temp }}/android-sdk
-      ANDROID_HOME: ${{ runner.temp }}/android-sdk
-      PATH: ${{ runner.temp }}/android-sdk/cmdline-tools/latest/bin:$PATH
-
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y openjdk-17-jdk python3-pip unzip wget
-        pip install --upgrade pip setuptools wheel
-        pip install buildozer cython
+    - name: Build with Buildozer
+      uses: ArtemSBulgakov/buildozer-action@v1
+      id: buildozer
+      with:
+        buildozer_version: stable
+        command: buildozer android debug
 
-    - name: Download Android cmdline-tools
-      run: |
-        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip -d $ANDROID_SDK_ROOT/cmdline-tools
-        mv $ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools $ANDROID_SDK_ROOT/cmdline-tools/latest
-
-    - name: Accept Android SDK licenses
-      run: yes | sdkmanager --licenses
-
-    - name: Install required Android SDK packages
-      run: |
-        sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
-
-    - name: Build APK
-      run: |
-        buildozer android debug
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: loginapp_apk
+        path: ${{ steps.buildozer.outputs.filename }}
